unpackaged/main/default/objects/CampaignMember/fields/Appointment_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checked indicates contact scheduled appointment as a result of campaign</description>
    <label>Appointment Scheduled</label>
    <type>Checkbox</type>
</CustomField>