unpackaged/main/default/objects/CampaignMember/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>